--- a/NZWalks/NZWalks/appsettings.json
+++ b/NZWalks/NZWalks/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "NZWalks": "server=LAPTOP-4IRMS91U\\SQLEXPRESS;database=NZWalksDb;Trusted_Connection=true"
+  }
 }
